--- a/Break.yml
+++ b/Break.yml
@@ -3,7 +3,8 @@
   collections:
     - netapp.ontap
   name: test1 
-  
+
+# Prompt user for destination cluster, creds, and SVM  
   vars_prompt: 
     - name: host
       prompt: Host IP
@@ -13,42 +14,41 @@
       private: false
     - name: passw
       prompt: Enter password
-      private: false
+      private: false   # Do NOT change this value to 'false' or the password will be shown in plain text
     - name: svm
       prompt: Enter SVM name
       private: false
       
   tasks:
-  - name: command to show volume
+# Initial check that the SVM has mirrored volumes and display the check resulsts
+  - name: Check that the SVM has Mirrored volumes
     na_ontap_command:
       hostname: "{{ host }}"
       username: "{{ uname }}"
       password: "{{ passw }}"
       https: true
       validate_certs: false
-      delay: 15
       command: ['snapmirror show -destination-path {{ svm }}:* -fields state']
       return_dict: true
     register: svmdrstatus
     until: svmdrstatus.msg.stdout.find("Snapmirrored") != -1
     retries: 5
     delay: 30
-    
-  - name: display that shit!
+  - name: Display results
     debug:
       msg: "{{ svmdrstatus.msg.stdout_lines[2].split()[2] }}"
-
-  - name: so this break is a break-up?
+# Send command to break any mirrored volume relationships
+  - name: Break SnapMirror relationships
     na_ontap_command:
-      hostname: 192.168.89.120
+      hostname: "{{ host }}"
       username: "{{ uname }}"
       password: "{{ passw }}"
       https: true
       validate_certs: false
       command: ['snapmirror break -destination-path {{ svm }}:*']
-  - name: but i miss you
+  - name: Verify SnapMirror relationships are broken
     na_ontap_command:
-      hostname: 192.168.89.120
+      hostname: "{{ host }}"
       username: "{{ uname }}"
       password: "{{ passw }}"
       https: true
@@ -59,6 +59,6 @@
     until: svmbreakstatus.msg.stdout.find("Broken-off") != -1
     retries: 3
     delay: 10
-  - name: show me the status!
+  - name: Display SnapMirror state
     debug:
       msg: "{{ svmbreakstatus.msg.stdout_lines[2].split()[2] }}"
